Competition leg and wrapping fixes

--- a/sass/styles/components/img-ring.scss
+++ b/sass/styles/components/img-ring.scss
@@ -1,9 +1,4 @@
 .img-ring{
   border-radius: 50%;
   border: solid 2px $orange;
-
-  img{
-    width: 100%;
-    height: 100%;
-  }
 }
