--- a/sass/styles/utilities/text.scss
+++ b/sass/styles/utilities/text.scss
@@ -44,3 +44,7 @@ $text-align: (
     }
   }
 }
+
+.word-wrap {
+  word-wrap: break-word;
+}
